exams/ckad-simulation5/manifests/setup/q13-api-server-default.yaml
# Q13: Deployment for NodePort Service exercise (in default namespace)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: nginx:alpine
          ports:
            - containerPort: 9090
