exams/ckad-simulation5/manifests/setup/q3-log-collector.yaml
# Q3: Pod failing with authorization errors (needs RBAC setup)
---
apiVersion: v1
kind: Pod
metadata:
  name: log-collector
  namespace: marsh
spec:
  containers:
    - name: collector
      image: bitnami/kubectl:latest
      command: ["sleep", "infinity"]
