exams/ckad-simulation5/manifests/setup/q14-web-eddy.yaml
# Q14: Deployment and Service for Ingress exercise
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
  namespace: eddy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: nginx:alpine
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: eddy
spec:
  selector:
    app: web
  ports:
    - port: 8080
      targetPort: 8080
